--- a/xdsclient/package.json
+++ b/xdsclient/package.json
@@ -25,7 +25,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "*",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "ngrok": "^4.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
