--- a/xdsclient/package.json
+++ b/xdsclient/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.2.1",
-    "@angular/cdk": "^12.2.1",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -20,14 +20,20 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@swimlane/ngx-charts": "^20.1.0",
     "body-parser": "*",
     "bootstrap": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "*",
     "jsonwebtoken": "^8.5.1",
+    "mdb-angular-ui-kit": "^2.0.0",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "ng2-file-upload": "^1.4.0",
     "ngrok": "^4.3.0",
+    "ngx-toastr": "^14.2.2",
+    "ngx-webstorage-service": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -36,6 +42,7 @@
     "@angular-devkit/build-angular": "~12.2.1",
     "@angular/cli": "~12.2.1",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/d3": "^7.1.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
