Software (denoising) + proxy + python server

--- a/xdsclient/package.json
+++ b/xdsclient/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -21,19 +21,31 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@swimlane/ngx-charts": "^20.1.0",
+    "base64url": "^3.0.1",
     "body-parser": "*",
     "bootstrap": "^5.1.0",
+    "canvasjs": "^1.8.3",
+    "chart.js": "^3.8.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "*",
+    "express-session": "^1.17.3",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mathjax": "^3.2.2",
     "mdb-angular-ui-kit": "^2.0.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "ng2-charts": "^3.0.11",
     "ng2-file-upload": "^1.4.0",
     "ngrok": "^4.3.0",
+    "ngx-colors": "^3.1.2",
     "ngx-toastr": "^14.2.2",
     "ngx-webstorage-service": "^5.0.0",
+    "node-fetch": "^3.2.6",
+    "request": "^2.88.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
