--- a/xdsclient/package.json
+++ b/xdsclient/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "mathjax": "^3.2.2",
     "mdb-angular-ui-kit": "^2.0.0",
+    "mongodb": "^4.8.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "ng2-charts": "^3.0.11",
